packages/yew-macro/tests/html_macro/generic-component-fail.stderr
error: this opening tag has no corresponding closing tag
  --> tests/html_macro/generic-component-fail.rs:43:13
   |
43 |     html! { <Generic<String>> };
   |             ^^^^^^^^^^^^^^^^^

error[E0107]: missing generics for struct `Generic`
  --> tests/html_macro/generic-component-fail.rs:44:32
   |
44 |     html! { <Generic<String>></Generic> };
   |                                ^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> tests/html_macro/generic-component-fail.rs:4:12
   |
4  | pub struct Generic<T> {
   |            ^^^^^^^ -
help: add missing generic argument
   |
44 |     html! { <Generic<String>></Generic<T>> };
   |                                ~~~~~~~~~~
